Bug 855453 - Move UnixSocket connect delay to main thread cancelable task; r=mrbkap